Worked on Interface and deleted more junk.

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Image-To-Quizlet</title>
+  <link rel="stylesheet" href='stylesheet/main.css'>
+</head>
+
 <html>
    <body>
+     <div class="header">
+       <h1>Image-To-Quizlet</h1>
+    <div class="Upload">
       <form action = "http://localhost:5000/uploader" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
