--- a/templates/test.html
+++ b/templates/test.html
@@ -7,8 +7,11 @@
 <html>
   <body>
   <div class="About">
-      <h1>Result</h1>
-      <output onload=""
+    <a href="http://localhost:5000/upload">Home</a>
+      <h2>Result</h2>
+    </div>
+      <iframe src= "f.filename">
+      </iframe>
 
 
       <div>
