--- a/templates/test.html
+++ b/templates/test.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <title>Result</title>
+  <link rel="stylesheet" type="text/css" href='{{url_for("static", filename="css/test.css")}}' />
 </head>
 
 <html>
   <body>
   <div class="About">
     <a href="http://localhost:5000/upload">Home</a>
+    <div>
       <h2>Result</h2>
     </div>
-      <iframe src= "f.filename">
-      </iframe>
+
+    </div>
 
 
       <div>
