--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,14 +1,5 @@
 .header {
   position: relative;
   text-align: center;
-}
-
-.body {
-  background-color: #cc9191;
-
-}
-
-.upload {
-  background-color: black;
-
+  background-color: #999;
 }
